<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_plan_top_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/height_analysis_item_margin"
    android:layout_marginBottom="@dimen/height_analysis_item_margin"
    android:layout_marginStart="@dimen/width_analysis_item_margin"
    android:layout_marginEnd="@dimen/width_analysis_item_margin"
    android:background="@drawable/shape_layout_white_radius_card"
    android:elevation="2dp"
    android:clickable="true"
    android:focusable="true" >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout_plan_top_viewmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <FrameLayout
...


    </android.support.constraint.ConstraintLayout>

    <!-- Visible in edit mode -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout_plan_top_editmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/constraintlayout_plan_top_viewmode"
        app:layout_constraintStart_toStartOf="parent" >

...
            app:layout_constraintBottom_toTopOf="@+id/imageview_plan_top_editmode_separationline"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!-- save button -->
        <ImageView
            android:id="@+id/imageview_plan_top_editmode_save"
            android:layout_width="@dimen/width_set_target_send_button"
            android:layout_height="@dimen/height_set_target_send_button"

            android:padding="@dimen/padding_set_target_send_button"
            android:layout_marginEnd="@dimen/margin_end_set_target_send_button"
            android:clickable="true"
...
            app:layout_constraintTop_toBottomOf="@+id/imageview_plan_top_editmode_save" />

        <!-- Set target content -->


        <FrameLayout
            android:id="@+id/framelayout_plan_top_editmode_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_task_icon"
            android:padding="@dimen/padding_icon_item"
            android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
            android:layout_marginTop="@dimen/height_analysis_mainitem_margin"
...
