<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_plan_main_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/height_analysis_item_margin"
    android:layout_marginBottom="@dimen/height_analysis_item_margin"
    android:layout_marginStart="@dimen/width_analysis_item_margin"
    android:layout_marginEnd="@dimen/width_analysis_item_margin"
    android:background="@drawable/shape_layout_white_radius_card"
    android:elevation="2dp"
    android:clickable="true"
    android:focusable="true" >


    <FrameLayout
        android:id="@+id/framelayout_plan_task_delete_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_task_icon"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintlayout_plantask_adjust_costtime"
        android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
        android:layout_marginTop="@dimen/height_analysis_mainitem_margin"
        android:layout_marginBottom="@dimen/height_analysis_mainitem_margin"
        >

        <ImageView
            android:id="@+id/imageview_plan_task_delete_hint"
            android:layout_width="@dimen/size_all_item_image"
            android:layout_height="@dimen/size_all_item_image"
            android:adjustViewBounds="false"
            android:scaleType="fitXY"
            android:visibility="visible"
            android:layout_margin="6dp"
            android:background="@drawable/btn_delete"
            app:srcCompat="@drawable/btn_delete" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/framelayout_plan_task_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_task_icon"
        android:padding="@dimen/padding_icon_item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/framelayout_plan_task_delete_hint"
        app:layout_constraintBottom_toTopOf="@+id/constraintlayout_plantask_adjust_costtime"
        android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
        android:layout_marginTop="@dimen/height_analysis_mainitem_margin"
        android:layout_marginBottom="@dimen/height_analysis_mainitem_margin"
        >

        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="@dimen/height_analysis_mainitem_margin"-->
        <!--android:layout_marginBottom="@dimen/height_analysis_mainitem_margin"-->

        <ImageView
            android:id="@+id/imageview_plan_task_icon"
            android:layout_width="@dimen/size_all_item_image"
            android:layout_height="@dimen/size_all_item_image"
            />

    </FrameLayout>


    <TextView
        android:id="@+id/textview_plan_task_name"
        android:layout_width="@dimen/width_trace_task_name"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:lines="1"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/framelayout_plan_task_icon"
        app:layout_constraintTop_toTopOf="@+id/framelayout_plan_task_icon"
        tools:text="Sleep" />

    <TextView
        android:id="@+id/textview_plan_category_name"
        style="@style/TextViewCardCategoryLabel"
        android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
        app:layout_constraintStart_toEndOf="@+id/framelayout_plan_task_icon"
        app:layout_constraintBottom_toBottomOf="@+id/framelayout_plan_task_icon"
        tools:text="@string/default_category" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout_plan_task_cost_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/framelayout_plan_task_icon"
        android:clickable="true"
        android:focusable="true"
        >

        <TextView
            android:id="@+id/textview_plan_task_cost_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/height_analysis_mainitem_margin"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="8 hr" />

        <ImageView
            android:id="@+id/imageview_plan_task_cost_time"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="@dimen/height_analysis_mainitem_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_plan_task_cost_time"
            android:background="@color/color_app_default_dark_grey"
            />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textview_analysis_task_cost_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-medium"
        android:lines="1"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:text="Actual:"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/textview_analysis_task_cost_time"
        app:layout_constraintTop_toTopOf="@+id/framelayout_plan_task_icon"
        tools:text="Actual:" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout_plantask_adjust_costtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintTop_toBottomOf="@+id/framelayout_plan_task_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <SeekBar
            android:id="@+id/seekbar_plan_task_adjust_cost_time_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:max="1440"
            android:progress="0"
            android:maxHeight="10dp"
            android:minHeight="10dp"
            android:thumb="@drawable/selector_seekbar_thumb"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <SeekBar
            android:id="@+id/seekbar_plan_task_adjust_cost_time_weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:max="10080"
            android:progress="0"
            android:maxHeight="10dp"
            android:minHeight="10dp"
            android:thumb="@drawable/selector_seekbar_thumb"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <!--android:layout_marginStart="16dp"-->
    <!--android:layout_marginEnd="10dp"-->
    <!--android:layout_marginTop="55dp"-->

    <!-- 可設定 progressBar 樣式 -->
    <!-- android:progressDrawable="@drawable/adjust_time_seekbar" -->

    <!-- 可設定 prgressBar 高度 -->
    <!--android:maxHeight="5dp"-->
    <!--android:minHeight="5dp"-->

    <!-- 設定滑動按鈕 -->
    <!--android:thumb=""-->


</android.support.constraint.ConstraintLayout>
