...
            android:textSize="20sp"
            tools:text="Toolbar" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearlayout_main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navbutton_main"
        android:background="@android:color/transparent"
        android:orientation="vertical">

    </LinearLayout>

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
...
