<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_add_record"
        android:icon="@drawable/page_stopwatch_timer"
        android:title="@string/page_title_trace"
        android:checked="true"
        />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/page_plan"
        android:title="@string/page_title_plan"
        />

    <item
        android:id="@+id/navigation_analysis"
        android:icon="@drawable/page_pie_chart"
        android:title="@string/page_title_analysis"
        />

</menu>
